metadata-retriever/metadata/objects/Test_Plan__c.object
<CustomObject>
    <description>PMO: Test Management. Store all test plans.</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Test Plans</relationshipLabel>
        <relationshipName>Test_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Schedule_End_Date__c</fullName>
        <label>Schedule End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Test Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Test Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Plans</pluralLabel>
    <recordTypes>
        <fullName>Requirement</fullName>
        <active>true</active>
        <label>Requirement</label>
    </recordTypes>
    <recordTypes>
        <fullName>UAT</fullName>
        <active>true</active>
        <label>UAT</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>